[package]
name = "dbm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env"] }
postgres = "0.19.7"
serde = { version = "1.0.196", features = ["derive"] }
serde-envfile = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
